--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-	"description": "A Schema for Openplanet's `info.toml` file, giving you autocomplete.",
-	"displayName": "Openplanet `info.toml` Schema",
+	"description": "A Schema for Openplanet's info.toml file, giving you autocomplete.",
+	"displayName": "Openplanet info.toml Schema",
 	"name": "openplanet-schema",
 	"publisher": "Not-Existing",
-	"repository": "https://github.com/N0tExisting/openplanet-schema",
+	"homepage": "https://github.com/N0tExisting/openplanet-schema/#Readme",
+	"repository": {
+		"url": "https://github.com/N0tExisting/openplanet-schema",
+		"type": "git"
+	},
+	"bugs": {
+		"url": "https://github.com/N0tExisting/openplanet-schema/issues"
+	},
+	"license": "AGPL-3.0-only",
 	"version": "0.1.0",
 	"engines": {
 		"vscode": "^1.51.0"
@@ -36,7 +44,8 @@
 		"tamasfe.even-better-toml"
 	],
 	"scripts": {
-		"build": "vsce package"
+		"build": "vsce package",
+		"vs": "vsce"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
